[package]
authors.workspace = true
edition.workspace = true
name = "rust-bigtable-playground"
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
client-bigtable.workspace = true
envy.workspace = true
serde.features = ["derive"]
serde.workspace = true
tokio.features = ["macros", "net", "rt-multi-thread"]
tokio.workspace = true
tracing-subscriber.features = ["env-filter", "json", "registry"]
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true

[workspace]
members = ["client-bigtable"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
client-bigtable.path = "client-bigtable"
envy = "0.4.2"
gcloud-sdk = "0.25.8"
serde = "1.0.215"
tokio = "1.41.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[workspace.package]
authors = ["pranc1ngpegasus"]
edition = "2021"
version = "0.0.0"

[workspace.lints.clippy]
all = "warn"
